# quic-rpc

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  DOCS.md  README.md  cliff.toml
.github/workflows/: ci.yml  rust.yml
_examples/: errors.rs  macro.rs
_examples/examples/: errors.rs
_examples/examples/split/client/: Cargo.toml
_examples/examples/split/server/: Cargo.toml
_examples/examples/split/server/src/: main.rs
_examples/examples/split/types/src/: lib.rs
examples/: bench.rs  compute.rs  derive.rs  errors.rs  lazy.rs  macro.rs  modularize.rs  storage.rs  store.rs
examples/split/client/: Cargo.toml
examples/split/client/src/: main.rs
examples/split/lazy/: Cargo.toml
examples/split/lazy/src/: main.rs
examples/split/server/: Cargo.toml
examples/split/server/src/: main.rs
examples/split/types/: Cargo.toml
examples/split/types/src/: lib.rs
old/: CHANGELOG.md  README.md
old/examples/split/client/src/: main.rs
old/examples/split/server/src/: main.rs
old/examples/split/types/src/: lib.rs
old/quic-rpc-derive/src/: lib.rs
old/quic-rpc-derive/tests/compile_fail/: duplicate_type.stderr  extra_attr_types.rs  extra_attr_types.stderr  multiple_fields.rs  named_enum.rs  named_enum.stderr  wrong_attr_types.stderr
old/src/: lib.rs
old/src/pattern/: bidi_streaming.rs  rpc.rs  server_streaming.rs  try_server_streaming.rs
old/src/transport/: boxed.rs  combined.rs  flume.rs  hyper.rs  mapped.rs
old/src/transport/misc/: mod.rs
old/tests/: hyper.rs  quinn.rs
quic-rpc-derive/: Cargo.toml
quic-rpc-derive/examples/: derive.rs
quic-rpc-derive/src/: lib.rs
quic-rpc-derive/tests/: smoke.rs
quic-rpc-derive/tests/compile_fail/: duplicate_type.rs  duplicate_type.stderr  extra_attr_types.rs  extra_attr_types.stderr  multiple_fields.rs  multiple_fields.stderr  named_enum.rs  named_enum.stderr  non_enum.rs  non_enum.stderr  wrong_attr_types.rs  wrong_attr_types.stderr
quic-rpc-iroh/: Cargo.toml
quic-rpc-iroh/examples/: derive.rs
quic-rpc-iroh/src/: lib.rs
quic-rpc-transport-iroh/: Cargo.toml  README.md
quic-rpc-transport-iroh/src/: lib.rs  transport.rs
quic-rpc-transport-iroh/tests/: iroh.rs  math.rs
src/: channel_factory.rs  client.rs  client2.rs  combined.rs  http2.rs  lib.rs  macros.rs  main.rs  map.rs  mem.rs  mem_and_quinn.rs  mem_or_quinn.rs  message.rs  quinn.rs  server.rs  server2.rs  sugar.rs  util.rs  yamux.rs
src/pattern/: bidi_streaming.rs  client_streaming.rs  mod.rs  rpc.rs  server_streaming.rs  try_bidi_streaming.rs  try_server_streaming.rs  util.rs
src/transport/: async_channel.rs  boxed.rs  combined.rs  flume.rs  http2.rs  hyper.rs  interprocess.rs  iroh.rs  iroh_net.rs  mapped.rs  mem.rs  mod.rs  quinn.rs  quinn_flume_socket.rs  s2n_quic.rs  tokio.rs  tokio_mpsc.rs  util.rs
src/transport/misc/: mod.rs
tests/: flume.rs  http2.rs  hyper.rs  interprocess.rs  iroh-net.rs  iroh.rs  math.rs  mem.rs  quinn.rs  s2n_quic.rs  slow_math.rs  tokio.rs  tokio_mpsc.rs  try.rs  try_bidi.rs  util.rs
