[package]
name = "quic-rpc"
version = "0.50.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "n0 team"]
keywords = ["api", "protocol", "network", "rpc"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/quic-rpc"
description = "A streaming rpc system based on quic"

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.76"

[dependencies]
# we require serde even in non-rpc mode
serde = { version = "1", default-features = false }
# just for the oneshot and mpsc queues
tokio = { version = "1.38", features = ["sync"], default-features = false  }
# for PollSender (which for some reason is not available in the main tokio api)
tokio-util = { version = "0.7.14", default-features = false }

# used in the endpoint handler code when using rpc
tracing = { version = "0.1.41", optional = true }
# used to ser/de messages when using rpc
postcard = { version = "1.1.1", features = ["alloc", "use-std"], optional = true }
# currently only transport when using rpc
quinn = { version = "0.13.0", package = "iroh-quinn", optional = true }
# used as a buffer for serialization when using rpc
smallvec = { version = "1.14.0", features = ["write"], optional = true }
# used in the test utils to generate quinn endpoints
rustls = { version = "0.23.5", default-features = false, features = ["std"], optional = true }
# used in the test utils to generate quinn endpoints
rcgen = { version = "0.13.2", optional = true }
# used in the test utils to generate quinn endpoints
anyhow = { version = "1.0.66", optional = true }
# used in the benches
futures-buffered ={ version = "0.2.9", optional = true }
thiserror = "2.0.12"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
# used in the derive example. This must not be a main crate dep or else it will be circular!
quic-rpc-derive = { path = "quic-rpc-derive" }
# just convenient for the enum definitions
derive_more = { version = "2", features = ["from"] }
# we need full for example main etc.
tokio = { version = "1", features = ["full"] }
# formatting
thousands = "0.2.0"
# for AbortOnDropHandle
n0-future = { version = "0.1.2" }

[features]
# enable the remote transport
rpc = ["dep:quinn", "dep:postcard", "dep:smallvec", "dep:tracing", "tokio/io-util"]
# add test utilities
test = ["dep:rustls", "dep:rcgen", "dep:anyhow", "dep:futures-buffered"]
# pick up parent span when creating channel messages
message_spans = []
default = ["rpc", "test", "message_spans"]

[workspace]
members = ["quic-rpc-derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "quicrpc_docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(quicrpc_docsrs)"] }
