[package]
name = "quic-rpc-derive"
version = "0.13.0"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
keywords = ["api", "protocol", "network", "rpc", "macro"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"
repository = "https://github.com/n0-computer/quic-rpc"
description = "Macros for quic-rpc"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
quic-rpc = { version = "0.13", path = ".." }

[dev-dependencies]
derive_more = "1.0.0-beta.6"
serde = { version = "1.0.203", features = ["serde_derive"] }
trybuild = "1.0.96"
