[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3.25"
quic-rpc = { path = "../../..", features = ["quinn-transport"] }
quinn = "0.9.0"
rustls = { version = "0.20.7", features = ["dangerous_configuration"] }
tracing-subscriber = "0.3.16"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
types = { path = "../types" }
