[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.14"
futures = "0.3.26"
quic-rpc = { path = "../../..", features = ["quinn-transport", "macros"] }
quinn = { package = "iroh-quinn", version = "0.12" }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tracing-subscriber = "0.3.16"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
types = { path = "../types" }
