[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1"
async-stream = "0.3.3"
futures = "0.3.26"
tracing-subscriber = "0.3.16"
quic-rpc = { path = "../../.." }
quinn = "0.9.3"
rcgen = "0.10.0"
rustls = "0.20.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
types = { path = "../types" }
