[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quic-rpc = { path = "../../..", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
derive_more = { version = "1", features = ["from", "try_into"] }
